--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ multi_line_output = 5
 not_skip = __init__.py
 
 [tool:multilint]
-paths = ec2_metadata
+paths = ec2_metadata.py
         setup.py
-        tests
+        test_ec2_metadata.py
 
 [tool:pytest]
 addopts = --cov=ec2_metadata
