--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,22 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+cached-property==1.3.0
 certifi==2017.4.17        # via requests
 chardet==3.0.4            # via requests
 configparser==3.5.0       # via flake8
+cookies==2.2.1            # via responses
 coverage==4.4.1           # via pytest-cov
 docutils==0.13.1
 enum34==1.1.6             # via flake8
 flake8==3.3.0
+funcsigs==1.0.2           # via mock
 idna==2.5                 # via requests
 mccabe==0.6.1             # via flake8
+mock==2.0.0               # via responses
 modernize==0.5
 multilint==2.1.0
+pbr==3.0.1                # via mock
 py==1.4.34                # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
@@ -22,4 +27,6 @@ pygments==2.2.0
 pytest-cov==2.5.1
 pytest==3.1.2
 requests==2.18.1
+responses==0.5.1
+six==1.10.0               # via mock, responses
 urllib3==1.21.1           # via requests
