Fix README rst so it will render on PyPI
Workaround the 'Duplicate implicit target name' warning from setup.py check
by subtly changing the titles. A genuine error that was missed has been fixed
too.

--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,9 @@
 cached-property
-# docutils - removed due to unfixable "Duplicate implicit target name"
+docutils
 flake8
 modernize
 multilint
-# pygments - removed due to unfixable "Duplicate implicit target name"
+pygments
 pytest
 pytest-cov
 requests
