--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,9 @@ line_length = 120
 multi_line_output = 5
 not_skip = __init__.py
 
+[metadata]
+license_file = LICENSE
+
 [tool:multilint]
 paths = ec2_metadata.py
         test_ec2_metadata.py
