--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+attrs==17.3.0             # via pytest
 cached-property==1.3.1
 certifi==2017.11.5        # via requests
 chardet==3.0.4            # via requests
@@ -13,20 +14,21 @@ coverage==4.4.2           # via pytest-cov
 docutils==0.14
 enum34==1.1.6             # via flake8
 flake8==3.5.0
-funcsigs==1.0.2           # via mock
+funcsigs==1.0.2           # via mock, pytest
 idna==2.6                 # via requests
 mccabe==0.6.1             # via flake8
 mock==2.0.0               # via responses
 modernize==0.5
 multilint==2.2.0
 pbr==3.1.1                # via mock
+pluggy==0.6.0             # via pytest
 py==1.5.2                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0
 pytest-cov==2.5.1
-pytest==3.2.5
+pytest==3.3.0
 requests==2.18.4
 responses==0.8.1
-six==1.11.0               # via mock, responses
+six==1.11.0               # via mock, pytest, responses
 urllib3==1.22             # via requests
