--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ docutils==0.14
 enum34==1.1.6             # via flake8
 flake8==3.5.0
 funcsigs==1.0.2           # via mock, pytest
+futures==3.1.1
 idna==2.6                 # via requests
+isort==4.3.4
 mccabe==0.6.1             # via flake8
 mock==2.0.0               # via responses
 modernize==0.6
