--- a/requirements.txt
+++ b/requirements.txt
@@ -21,16 +21,17 @@ isort==4.3.4
 mccabe==0.6.1             # via flake8
 mock==2.0.0               # via responses
 modernize==0.6
+more-itertools==4.1.0     # via pytest
 multilint==2.2.1
 pbr==3.1.1                # via mock
 pluggy==0.6.0             # via pytest
-py==1.5.2                 # via pytest
+py==1.5.3                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0
 pytest-cov==2.5.1
-pytest==3.4.2
+pytest==3.5.0
 requests==2.18.4
 responses==0.8.1
-six==1.11.0               # via mock, pytest, responses
+six==1.11.0               # via mock, more-itertools, pytest, responses
 urllib3==1.22             # via requests
