--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cookies==2.2.1            # via responses
 coverage==4.5.1           # via pytest-cov
 docutils==0.14
 enum34==1.1.6             # via flake8
+flake8-commas==2.0.0
 flake8==3.5.0
 funcsigs==1.0.2           # via mock, pytest
 futures==3.1.1
@@ -20,9 +21,9 @@ idna==2.6                 # via requests
 isort==4.3.4
 mccabe==0.6.1             # via flake8
 mock==2.0.0               # via responses
-modernize==0.6
+modernize==0.6.1
 more-itertools==4.1.0     # via pytest
-multilint==2.2.1
+multilint==2.3.0
 pbr==4.0.2                # via mock
 pluggy==0.6.0             # via pytest
 py==1.5.3                 # via pytest
@@ -30,8 +31,8 @@ pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0
 pytest-cov==2.5.1
-pytest==3.5.0
+pytest==3.5.1
 requests==2.18.4
 responses==0.9.0
-six==1.11.0               # via mock, more-itertools, pytest, responses
+six==1.11.0               # via mock, more-itertools, multilint, pytest, responses
 urllib3==1.22             # via requests
