--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ add_imports =
     from __future__ import division
     from __future__ import print_function
     from __future__ import unicode_literals
+include_trailing_comma = True
 known_first_party = ec2_metadata
 line_length = 120
 multi_line_output = 5
