--- a/requirements.txt
+++ b/requirements.txt
@@ -6,28 +6,24 @@
 #
 atomicwrites==1.2.1       # via pytest
 attrs==18.2.0             # via pytest
-biscuits==0.1.1 ; python_version > '3.0'  # for responses
 cached-property==1.5.1
 certifi==2018.10.15       # via requests
 chardet==3.0.4            # via requests
 configparser==3.5.0       # via flake8
-cookies==2.2.1            # via responses
 coverage==4.5.1           # via pytest-cov
 docutils==0.14
 enum34==1.1.6             # via flake8
 flake8-commas==2.0.0
 flake8==3.5.0
-funcsigs==1.0.2           # via mock, pytest
+funcsigs==1.0.2           # via pytest
 futures==3.1.1
 idna==2.7                 # via requests
 isort==4.3.4
 mccabe==0.6.1             # via flake8
-mock==2.0.0               # via responses
 modernize==0.6.1
 more-itertools==4.3.0     # via pytest
 multilint==2.4.0
 pathlib2==2.3.2           # via pytest
-pbr==5.0.0                # via mock
 pluggy==0.8.0             # via pytest
 py==1.7.0                 # via pytest
 pycodestyle==2.3.1        # via flake8
@@ -35,8 +31,8 @@ pyflakes==1.6.0           # via flake8
 pygments==2.2.0
 pytest-cov==2.6.0
 pytest==3.9.1
+requests-mock==1.5.2
 requests==2.20.0
-responses==0.10.1
 scandir==1.9.0            # via pathlib2
-six==1.11.0               # via mock, more-itertools, multilint, pathlib2, pytest, responses
+six==1.11.0               # via more-itertools, multilint, pathlib2, pytest, requests-mock
 urllib3==1.24             # via requests
