--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{27,36}-codestyle,
-    py{27,36}
+    py{27,3},
+    py{27,3}-codestyle
 
 [testenv]
 install_command = pip install --no-deps {opts} {packages}
@@ -15,6 +15,6 @@ skip_install = true
 commands = multilint --skip setup.py
 
 
-[testenv:py36-codestyle]
+[testenv:py3-codestyle]
 skip_install = true
 commands = multilint
