--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
-sudo: false
-dist: trusty
+sudo: true
+dist: xenial
 
 language: python
-python: 3.6
+python: 3.7
 cache: pip
 
 notifications:
   email: false
 
-language: python
-
 install:
-  - pip install tox
+- pip install tox
 
 script: tox
