--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,12 @@
 [tox]
 envlist =
-    py{27,3},
-    py{27,3}-codestyle
+    py3,
+    py3-codestyle
 
 [testenv]
 install_command = pip install --no-deps {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
 commands = pytest {posargs}
-
-
-[testenv:py27-codestyle]
-# setup.py check broken on travis python 2.7
-skip_install = true
-commands = multilint --skip setup.py
-
 
 [testenv:py3-codestyle]
 skip_install = true
