--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,38 @@
+[metadata]
+name = ec2-metadata
+version =  2.0.0
+description = An easy interface to query the EC2 metadata API, with caching.
+long_description = file: README.rst, HISTORY.rst
+long_description_content_type = text/x-rst
+author = Adam Johnson
+author_email = me@adamj.eu
+url = https://github.com/adamchainz/ec2-metadata
+project_urls =
+    Changelog = https://github.com/adamchainz/ec2-metadata/blob/master/HISTORY.rst
+license = ISC License
+keywords = AWS, EC2, metadata
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: ISC License (ISCL)
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+license_file = LICENSE
+
+[options]
+py_modules = ec2_metadata
+include_package_data = True
+install_requires =
+    cached-property
+    requests
+python_requires = >=3.5
+zip_safe = False
+
 [flake8]
 max-line-length = 80
 select = C,E,F,W,B,B950
@@ -11,10 +46,7 @@ line_length = 88
 multi_line_output = 3
 use_parentheses = True
 
-[metadata]
-license_file = LICENSE
-
 [tool:multilint]
 paths = ec2_metadata.py
-        setup.py
-        test_ec2_metadata.py
+    setup.py
+    test_ec2_metadata.py
