Move to src directory layout

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,8 @@ classifiers =
 license_file = LICENSE
 
 [options]
+package_dir=
+    =src
 py_modules = ec2_metadata
 include_package_data = True
 install_requires =
@@ -47,6 +49,7 @@ multi_line_output = 3
 use_parentheses = True
 
 [tool:multilint]
-paths = ec2_metadata.py
+paths =
     setup.py
-    test_ec2_metadata.py
+    src
+    tests
