--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -3,11 +3,14 @@ cached-property
 docutils
 flake8
 flake8-bugbear
+flake8-comprehensions
+flake8-tidy-imports
 isort
 multilint
 pygments
 pytest
 pytest-cov
+pytest-randomly
 requests
 requests-mock
 twine
