--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ec2-metadata
-version =  2.0.0
+version = 2.0.0
 description = An easy interface to query the EC2 metadata API, with caching.
 long_description = file: README.rst, HISTORY.rst
 long_description_content_type = text/x-rst
@@ -22,6 +22,7 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 license_file = LICENSE
 
 [options]
