Stop including changelog in PyPI description
It's linked prominently through project_urls already, it doesn't need to pollute the PyPI display of the README. Additionally it's sometimes necessary to push a change for a past release, but such changes cannot be added to that release's PyPI description as it's immutable.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = ec2-metadata
 version = 2.2.0
 description = An easy interface to query the EC2 metadata API, with caching.
-long_description = file: README.rst, HISTORY.rst
+long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = Adam Johnson
 author_email = me@adamj.eu
