Add Twitter link to project_urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ author_email = me@adamj.eu
 url = https://github.com/adamchainz/ec2-metadata
 project_urls =
     Changelog = https://github.com/adamchainz/ec2-metadata/blob/master/HISTORY.rst
+    Twitter = https://twitter.com/adamchainz
 license = ISC License
 keywords = AWS, EC2, metadata
 classifiers =
