Move to MIT License
Standardizing licenses across my maintained projects.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,12 +10,12 @@ url = https://github.com/adamchainz/ec2-metadata
 project_urls =
     Changelog = https://github.com/adamchainz/ec2-metadata/blob/master/HISTORY.rst
     Twitter = https://twitter.com/adamchainz
-license = ISC License
+license = MIT
 keywords = AWS, EC2, metadata
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
-    License :: OSI Approved :: ISC License (ISCL)
+    License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3 :: Only
