--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ insert_final_newline = true
 charset = utf-8
 end_of_line = lf
 
-[LICENSE]
-insert_final_newline = false
+[*.{css,html,js,yaml,yml}]
+indent_size = 2
+
+[Makefile]
+indent_style = tab
