Move coverage to coveralls

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,19 @@ install_requires =
 python_requires = >=3.6
 zip_safe = False
 
+
+[coverage:run]
+branch = True
+include = */ec2_metadata.py
+
+[coverage:paths]
+source =
+   src
+   .tox/*/site-packages
+
+[coverage:report]
+show_missing = True
+
 [flake8]
 max-line-length = 80
 select = E,F,W,B,B950,C,I
