Use coverage 'source' option

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ zip_safe = False
 
 [coverage:run]
 branch = True
-include = */ec2_metadata.py
+source = ec2_metadata
 
 [coverage:paths]
 source =
