Use functools.cached_property on Python 3.8+

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ package_dir=
 py_modules = ec2_metadata
 include_package_data = True
 install_requires =
-    cached-property
+    cached-property ; python_version < "3.8"
     requests
 python_requires = >=3.6
 zip_safe = False
