--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ license_file = LICENSE
 [options]
 package_dir=
     =src
-py_modules = ec2_metadata
+packages = find:
 include_package_data = True
 install_requires =
     cached-property ; python_version < "3.8"
@@ -37,6 +37,8 @@ install_requires =
 python_requires = >=3.6
 zip_safe = False
 
+[options.packages.find]
+where = src
 
 [coverage:run]
 branch = True
