--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: pip
+        cache-dependency-path: 'requirements/*.txt'
 
     - name: Install dependencies
       run: |
@@ -51,7 +52,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-          cache: pip
 
       - name: Install dependencies
         run: python -m pip install --upgrade coverage[toml]
