Ignore distutils warning

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,12 @@ envlist =
     py{36,37,38,39,310}
 
 [testenv]
-commands = python -W error::DeprecationWarning -W error::PendingDeprecationWarning -m coverage run --parallel -m pytest {posargs}
+# Ignoring distutils DeprecationWarning due to: https://github.com/jamielennox/requests-mock/issues/172
+commands =
+    python -W error::DeprecationWarning \
+           -W error::PendingDeprecationWarning \
+           -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
+           -m coverage run --parallel -m pytest {posargs}
 
 [testenv:py36]
 deps = -rrequirements/py36.txt
