--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
 [tox]
 isolated_build = True
 envlist =
-    py{36,37,38,39}
+    py{36,37,38,39,310}
 
 [testenv]
-commands = python -W error::DeprecationWarning -W error::PendingDeprecationWarning -m coverage run --parallel -m pytest {posargs}
+# Ignoring distutils DeprecationWarning due to: https://github.com/jamielennox/requests-mock/issues/172
+commands =
+    python -W error::DeprecationWarning \
+           -W error::PendingDeprecationWarning \
+           -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
+           -m coverage run --parallel -m pytest {posargs}
 
 [testenv:py36]
 deps = -rrequirements/py36.txt
@@ -17,3 +22,6 @@ deps = -rrequirements/py38.txt
 
 [testenv:py39]
 deps = -rrequirements/py39.txt
+
+[testenv:py310]
+deps = -rrequirements/py310.txt
