--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands =
     python -W error::DeprecationWarning \
            -W error::PendingDeprecationWarning \
            -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
-           -m coverage run --parallel -m pytest {posargs}
+           -m coverage run -m pytest {posargs}
 
 [testenv:py36]
 deps = -rrequirements/py36.txt
