Ignore second distutils warning

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,12 @@ envlist =
     py{36,37,38,39,310}
 
 [testenv]
-# Ignoring distutils DeprecationWarning due to: https://github.com/jamielennox/requests-mock/issues/172
+# Ignoring distutils DeprecationWarnings due to: https://github.com/jamielennox/requests-mock/issues/172
 commands =
     python -W error::DeprecationWarning \
            -W error::PendingDeprecationWarning \
            -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
+           -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
            -m coverage run -m pytest {posargs}
 
 [testenv:py36]
