--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ commands =
            -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
            -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
            -m coverage run -m pytest {posargs}
+setenv =
+    PYTHONDEVMODE=1
 
 [testenv:py36]
 deps = -rrequirements/py36.txt
