Simplify tox 'deps' setting
It can be templated, who knew?

--- a/tox.ini
+++ b/tox.ini
@@ -11,20 +11,6 @@ commands =
            -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
            -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
            -m coverage run -m pytest {posargs}
+deps = -r requirements/{envname}.txt
 setenv =
     PYTHONDEVMODE=1
-
-[testenv:py36]
-deps = -rrequirements/py36.txt
-
-[testenv:py37]
-deps = -rrequirements/py37.txt
-
-[testenv:py38]
-deps = -rrequirements/py38.txt
-
-[testenv:py39]
-deps = -rrequirements/py39.txt
-
-[testenv:py310]
-deps = -rrequirements/py310.txt
