--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,9 @@ where = src
 [coverage:run]
 branch = True
 parallel = True
-source = ec2_metadata
+source =
+    ec2_metadata
+    tests
 
 [coverage:paths]
 source =
