Update warning control in tox.ini
* Use one flag per line format
* Make ResourceWarning trigger errors
* Update old warning ignores

--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,14 @@ envlist =
 [testenv]
 # Ignoring distutils DeprecationWarnings due to: https://github.com/jamielennox/requests-mock/issues/172
 commands =
-    python -W error::DeprecationWarning \
-           -W error::PendingDeprecationWarning \
-           -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
-           -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
-           -m coverage run -m pytest {posargs}
+  python \
+    -W error::ResourceWarning \
+    -W error::DeprecationWarning \
+    -W error::PendingDeprecationWarning \
+    -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
+    -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
+    -m coverage run \
+    -m pytest {posargs:tests}
 deps = -r requirements/{envname}.txt
 setenv =
     PYTHONDEVMODE=1
