--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    py{37,38,39,310}
+    py{37,38,39,310,311}
 
 [testenv]
 # Ignoring distutils DeprecationWarnings due to: https://github.com/jamielennox/requests-mock/issues/172
+# Ignoring 'path is deprecated' from certifi: https://github.com/certifi/python-certifi/issues/192
 commands =
   python \
     -W error::ResourceWarning \
@@ -12,6 +13,7 @@ commands =
     -W error::PendingDeprecationWarning \
     -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
     -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
+    -W 'ignore:path is deprecated. Use files() instead.:DeprecationWarning' \
     -m coverage run \
     -m pytest {posargs:tests}
 deps = -r requirements/{envname}.txt
