--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ source =
 [coverage:paths]
 source =
    src
-   .tox/*/site-packages
+   .tox/**/site-packages
 
 [coverage:report]
 show_missing = True
