Add setup-cfg-fmt to pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,41 +1,42 @@
 [metadata]
-name = ec2-metadata
+name = ec2_metadata
 version = 2.11.0
 description = An easy interface to query the EC2 metadata API, with caching.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
+url = https://github.com/adamchainz/ec2-metadata
 author = Adam Johnson
 author_email = me@adamj.eu
-url = https://github.com/adamchainz/ec2-metadata
-project_urls =
-    Changelog = https://github.com/adamchainz/ec2-metadata/blob/main/HISTORY.rst
-    Twitter = https://twitter.com/adamchainz
 license = MIT
-keywords = AWS, EC2, metadata
+license_file = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Typing :: Typed
+keywords = AWS, EC2, metadata
+project_urls =
+    Changelog = https://github.com/adamchainz/ec2-metadata/blob/main/HISTORY.rst
+    Twitter = https://twitter.com/adamchainz
 
 [options]
-package_dir=
-    =src
 packages = find:
-include_package_data = True
 install_requires =
-    cached-property ; python_version < "3.8"
     requests
+    cached-property;python_version < "3.8"
 python_requires = >=3.7
+include_package_data = True
+package_dir =
+    =src
 zip_safe = False
 
 [options.packages.find]
@@ -50,8 +51,8 @@ source =
 
 [coverage:paths]
 source =
-   src
-   .tox/**/site-packages
+    src
+    .tox/**/site-packages
 
 [coverage:report]
 show_missing = True
