--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
 keywords = AWS, EC2, metadata
 project_urls =
     Changelog = https://github.com/adamchainz/ec2-metadata/blob/main/HISTORY.rst
+    Mastodon = https://fosstodon.org/@adamchainz
     Twitter = https://twitter.com/adamchainz
 
 [options]
