Add tox-ini-fmt pre-commit hook

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,21 @@
 [tox]
-envlist =
-    py{37,38,39,310,311}
+requires =
+    tox>=4.2
+env_list =
+    py{311, 310, 39, 38, 37}
 
 [testenv]
-# Ignoring distutils DeprecationWarnings due to: https://github.com/jamielennox/requests-mock/issues/172
-# Ignoring 'path is deprecated' from certifi: https://github.com/certifi/python-certifi/issues/192
+deps =
+    -r requirements/{envname}.txt
+set_env =
+    PYTHONDEVMODE = 1
 commands =
-  python \
-    -W error::ResourceWarning \
-    -W error::DeprecationWarning \
-    -W error::PendingDeprecationWarning \
-    -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
-    -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
-    -W 'ignore:path is deprecated. Use files() instead.:DeprecationWarning' \
-    -m coverage run \
-    -m pytest {posargs:tests}
-deps = -r requirements/{envname}.txt
-setenv =
-    PYTHONDEVMODE=1
+    python \
+      -W error::ResourceWarning \
+      -W error::DeprecationWarning \
+      -W error::PendingDeprecationWarning \
+      -W 'ignore:The distutils package is deprecated:DeprecationWarning' \
+      -W 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning' \
+      -W 'ignore:path is deprecated. Use files() instead.:DeprecationWarning' \
+      -m coverage run \
+      -m pytest {posargs:tests}
