--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,7 @@ commands =
       -W 'ignore:path is deprecated. Use files() instead.:DeprecationWarning' \
       -m coverage run \
       -m pytest {posargs:tests}
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203
