--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,17 @@ dependencies = [
 ]
 urls = { Changelog = "https://github.com/adamchainz/ec2-metadata/blob/main/CHANGELOG.rst", Funding = "https://adamj.eu/books/", Repository = "https://github.com/adamchainz/ec2-metadata" }
 
+[dependency-groups]
+test = [
+  "cached-property",
+  "coverage[toml]",
+  "pygments",
+  "pytest",
+  "pytest-randomly",
+  "requests",
+  "requests-mock",
+]
+
 [tool.isort]
 add_imports = [
   "from __future__ import annotations",
