--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,9 @@ env_list =
     py{313, 312, 311, 310, 39}
 
 [testenv]
+runner = uv-venv-lock-runner
 package = wheel
 wheel_build_env = .pkg
-deps =
-    -r tests/requirements/{envname}.txt
 set_env =
     PYTHONDEVMODE = 1
 commands =
@@ -21,6 +20,8 @@ commands =
       -W 'ignore:path is deprecated. Use files() instead.:DeprecationWarning' \
       -m coverage run \
       -m pytest {posargs:tests}
+dependency_groups =
+    test
 
 [flake8]
 max-line-length = 88
