Migrate from requests to urllib3
Fixes #539.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "requests",
+  "urllib3>=2",
 ]
 urls = { Changelog = "https://github.com/adamchainz/ec2-metadata/blob/main/CHANGELOG.rst", Funding = "https://adamj.eu/books/", Repository = "https://github.com/adamchainz/ec2-metadata" }
 
@@ -45,8 +45,6 @@ test = [
   "pygments",
   "pytest",
   "pytest-randomly",
-  "requests",
-  "requests-mock",
 ]
 
 [tool.ruff]
