--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
   "urllib3>=2",
 ]
 urls = { Changelog = "https://github.com/adamchainz/ec2-metadata/blob/main/CHANGELOG.rst", Funding = "https://adamj.eu/books/", Repository = "https://github.com/adamchainz/ec2-metadata" }
-scripts.ec2-metadata = "ec2_metadata.cli:main"
+scripts.imds = "ec2_metadata.cli:main"
 
 [dependency-groups]
 test = [
